# mentorlib

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  config.json  manage.py  package-lock.json  pyproject.toml
mentorlib/: asgi.py  settings.py  urls.py  views.py  wsgi.py
mentorlib/api/: urls.py  views.py
mentorlib/apps/configuration/: apps.py  models.py  utils.py
mentorlib/apps/courses/: admin.py  apps.py  consumers.py  filters.py  forms.py  models.py  routing.py  urls.py  views.py
mentorlib/apps/spaces/: apps.py  urls.py  views.py
mentorlib/apps/users/: admin.py  apps.py  consumers.py  forms.py  models.py  routing.py  signals.py  urls.py  utils.py  validators.py  views.py
mentorlib/core/: forms.py
mentorlib/core/utilities/: file.py  message.py
mentorlib/fixtures/configuration/: department.json  resource.json  semester.json  studyyear.json
mentorlib/fixtures/users/: notificationtype.json
mentorlib/management/commands/: delete_old_files.py  show_perms.py
mentorlib/utils/: context_processors.py  socket.py
static/src/: input.css  output.css
static/src/js/: chat.js  filePreview.js  socket.js  utils.js
templates/: _base.html  dropdown.html  footer.html  index.html  navbar.html
templates/components/: form_render.html  upload_files.html
templates/courses/: action_success.html  ask.html  create.html  details.html  index.html
templates/courses/tabs/: documents.html  (+2 more)
templates/partials/: notifications.html
templates/spaces/: mentor.html  student.html
templates/users/: login.html  profile.html  register.html  settings.html
(+64 files in other folders)
